# bsw-test

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: pyproject.toml
app/src/bet_maker/: main.py
app/src/domain/events/models/: event.py
app/src/domain/shared/models/mixins/: uuid.py
app/src/line_provider/: main.py
bet-maker/: README.md  pyproject.toml
bet-maker/app/migrations/: env.py
bet-maker/app/migrations/versions/: 2025_01_14_0832-a47c8998a6d0_001.py
bet-maker/app/src/: main.py
bet-maker/app/src/api/: bets.py  events.py
bet-maker/app/src/core/exceptions/: http.py
bet-maker/app/src/infrastructure/kafka/: consumer.py  exceptions.py  producer.py  topic.py
bet-maker/app/src/models/: __init__.py  bet.py
bet-maker/app/src/repositories/: base.py  bet.py
bet-maker/app/src/schemas/: bet.py  event.py
bet-maker/app/src/services/: bet.py  consumer.py  event.py
bet-maker/migrations/: env.py
bet-maker/src/api/: bets.py  events.py
bet-maker/src/models/: base.py
infrastructure/: .env  docker-compose.yml
infrastructure/kafka-data/: meta.properties  recovery-point-offset-checkpoint  replication-offset-checkpoint
infrastructure/kafka-data/KafkaTopic.REQUEST-0/: partition.metadata
infrastructure/kafka-data/REQUEST-0/: partition.metadata
line-provider/: README.md  pyproject.toml
line-provider/app/migrations/versions/: 2025_01_13_1550-eb5dd1edd2d6_001.py
line-provider/app/src/: main.py
line-provider/app/src/api/: events.py
line-provider/app/src/core/: settings.py
line-provider/app/src/core/exceptions/: handler.py
line-provider/app/src/enums/: status.py
line-provider/app/src/infrastructure/kafka/: commands.py  consumer.py  producer.py
line-provider/app/src/infrastructure/postgresql/: database.py  exceptions.py  session.py
line-provider/app/src/models/: __init__.py  event.py
line-provider/app/src/repositories/: event.py
line-provider/app/src/schemas/: event.py
line-provider/app/src/services/: consumer.py  event.py
