[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = ""
authors = ["Ilya Goroshchik <goooroshchik@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
pydantic = "^2.10.5"
alembic = "^1.14.0"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
uvloop = "^0.21.0"
aiokafka = "^0.11.0"

asyncpg = "^0.30.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests", ]
addopts = "-p no:warnings --tb=short --cov=/app --cov-report=html"
console_output_stype = "count"
minversion = "7.2.0"
pythonpath = ". app"
filterwarnings = "ignore"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = ["tests/*",]

[tool.mypy]
mypy_path = "/app"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
strict_optional = true
explicit_package_bases = true
disable_error_code = ["no-redef"]
plugins = ['pydantic.mypy']
exclude = ["migrations"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = 'tests.*'
disallow_untyped_defs = false
check_untyped_defs = false
strict_optional = false

[tool.ruff]
line-length = 88
src = ["app/"]
exclude = [
    "*.git",
    "*.hg",
    "*.mypy_cache",
    "*.tox",
    "*.venv",
    "migrations",
    "_build",
    "buck-out",
    "build",
    "dist",
    "alembic",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]

[tool.ruff.lint.isort]
known-local-folder = ["src",]
