[tool.poetry]
name = "line-provider"
version = "0.1.0"
description = ""
authors = ["Ilya Goroshchik <goooroshchik@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
