[tool.poetry]
name = "line-provider"
version = "0.1.0"
description = ""
authors = ["Ilya Goroshchik <goooroshchik@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
pydantic = "^2.10.5"
alembic = "^1.14.0"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
uvloop = "^0.21.0"
asyncpg = "^0.30.0"
aiokafka = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
